# whytui

./: .gitignore  Cargo.toml  README.md  debug_youtube_response.json  todo.md
src/: api.rs  app.rs  features.rs  flac.rs  main.rs  offline.rs  player.rs  ui.rs  ui1.rs  ui2.rs  ui3.rs  ui_common.rs
