[package]
name = "whytui"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0"

dirs = "6.0.0"
rand = "0.9.2"
colored = "2.1"
urlencoding = "2.1.3"
crossterm = "0.29.0"
